<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="summary_empty" translatable="false"></string>
    <string name="switch_bar_on">On</string>
    <string name="switch_bar_off">Off</string>
    <string name="device_settings_app_name">Advanced settings</string>
    <string name="dialog_ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="reset">Reset</string>
    <string name="realmeparts">RealmeParts</string>
    <string name="realmeparts_summary">Additional Tweaks</string>
    <string name="ambient_enable">Use ambient display</string>
    <string name="ambient_display_title">Ambient display</string>
    <string name="ambient_display_enable_title">Ambient display</string>
    <string name="ambient_display_enable_summary">Wake screen when you receive notifications</string>
    <string name="ambient_display_gestures_title">Ambient display gestures</string>
    <string name="ambient_display_gestures_summary">Additional gestures to wake the screen</string>
    <string name="ambient_display_summary">Wake screen when you receive notifications</string>
    <string name="ambient_display_summary_on">Screen will wake when you receive notifications</string>
    <string name="ambient_display_summary_off">Screen will not wake when you receive notifications</string>
    <string name="ambient_display_always_on_title">Always on</string>
    <string name="ambient_display_always_on_summary">Show time, notification icons, and other info. Increased battery usage.</string>
    <string name="proximity_sensor_title">Proximity sensor</string>
    <string name="hand_wave_gesture_title">Hand wave</string>
    <string name="hand_wave_gesture_summary">Pulse notifications on hand wave</string>
    <string name="hand_wave_gesture_flat_title">Detect orientation</string>
    <string name="hand_wave_gesture_flat_summary">Pulse only if the phone is lying face up on a flat surface</string>
    <string name="pocket_gesture_title">Pocket</string>
    <string name="pocket_gesture_summary">Pulse notifications on removal from pocket</string>
    <string name="proximity_wake_title">Proximity wake</string>
    <string name="proximity_wake_enable_title">Proximity wake</string>
    <string name="proximity_wake_enable_summary">Wake device on hand wave</string>
    <string name="doze_settings_help_title">Help</string>
    <string name="doze_settings_help_text">These features use sensor events to launch a doze notification pulse. The chosen sensor is only enabled when the device receives a notification, this helps to reduce battery usage. There is also an option to enable the chosen sensor as soon as the screen turns off, this will cause higher battery usage.</string>
    <string name="vibrator_intensity_control">Vibration</string>
    <string name="vmax_override_mode_title">Override Vibration Intensity</string>
    <string name="vmax_override_mode_summary">Overrides vibration intensity value of Notification for all events</string>
    <string name="vmax_override_mode_footer">Uses the value set for incomming call vibration intensity</string>
    <string name="system_strength_title">System</string>
    <string name="notification_strength_title">Notification</string>
    <string name="call_strength_title">Call</string>
    <string name="touchscreen_gesture_category">Screen OFF Gestures</string>
    <string name="touchscreen_gesture_settings_title">Touchscreen gestures</string>
    <string name="touchscreen_gesture_settings_summary">Perform various touchscreen gestures for quick actions</string>
    <string name="touchscreen_gestures_haptic_feedback_title">Haptic feedback</string>
    <string name="touchscreen_gestures_haptic_feedback_summary">Vibrate when a touchscreen gesture is detected</string>
    <string name="touchscreen_gesture_two_fingers_down_swipe_title">Swipe down with two fingers</string>
    <string name="touchscreen_gesture_one_finger_up_swipe_title">Swipe up with one finger</string>
    <string name="touchscreen_gesture_one_finger_up_swipe_home_title">Swipe up from the home button</string>
    <string name="touchscreen_gesture_one_finger_down_swipe_title">Swipe down with one finger</string>
    <string name="touchscreen_gesture_one_finger_left_swipe_title">Swipe left with one finger</string>
    <string name="touchscreen_gesture_one_finger_right_swipe_title">Swipe right with one finger</string>
    <string name="touchscreen_gesture_up_arrow_title">Draw a \"Λ\"</string>
    <string name="touchscreen_gesture_down_arrow_title">Draw a \"V\"</string>
    <string name="touchscreen_gesture_left_arrow_title">Draw a \"&lt;\"</string>
    <string name="touchscreen_gesture_right_arrow_title">Draw a \"&gt;\"</string>
    <string name="touchscreen_gesture_letter_c_title">Draw the letter \"C\"</string>
    <string name="touchscreen_gesture_letter_e_title">Draw the letter \"e\"</string>
    <string name="touchscreen_gesture_letter_o_title">Draw the letter \"O\"</string>
    <string name="touchscreen_gesture_letter_m_title">Draw the letter \"M\"</string>
    <string name="touchscreen_gesture_letter_s_title">Draw the letter \"S\"</string>
    <string name="touchscreen_gesture_letter_v_title">Draw the letter \"V\"</string>
    <string name="touchscreen_gesture_letter_w_title">Draw the letter \"W\"</string>
    <string name="touchscreen_gesture_letter_z_title">Draw the letter \"Z\"</string>
    <string name="touchscreen_gesture_action_dialog_title">Gesture action</string>
    <string name="touchscreen_gesture_action_do_nothing">Do nothing</string>
    <string name="touchscreen_gesture_action_flashlight">Toggle flashlight</string>
    <string name="touchscreen_gesture_action_camera">Open the camera</string>
    <string name="touchscreen_gesture_action_browser">Open the browser</string>
    <string name="touchscreen_gesture_action_dialer">Open the dialer</string>
    <string name="touchscreen_gesture_action_email">View your emails</string>
    <string name="touchscreen_gesture_action_messages">View your messages</string>
    <string name="touchscreen_gesture_action_play_pause_music">Play/pause music</string>
    <string name="touchscreen_gesture_action_previous_track">Play the previous music track</string>
    <string name="touchscreen_gesture_action_next_track">Play the next music track</string>
    <string name="touchscreen_gesture_action_volume_down">Lower media volume</string>
    <string name="touchscreen_gesture_action_volume_up">Raise media volume</string>
    <string name="fastcharge_control">USB Fastcharge Control</string>
    <string name="fastcharge_title">Enable USB Fastcharge</string>
    <string name="fastcharge_summary">Charge upto 900mA when connected to a computer via USB 3.0 port</string>
    <string name="display_category">Display</string>
    <string name="device_kcal_title">Display Calibration</string>
    <string name="device_kcal_summary">Display color calibration using KCAL</string>
    <string name="advanced_settings_kcal">Display Color Calibration</string>
    <string name="cat_colormanagement">Color Settings</string>
    <string name="cat_calibration">Display Calibration</string>
    <string name="kcal_enabled">On</string>
    <string name="kcal_disabled">Off</string>
    <string name="color_red">Red</string>
    <string name="color_green">Green</string>
    <string name="color_blue">Blue</string>
    <string name="color_minimum">Minimum</string>
    <string name="saturation">Saturation</string>
    <string name="value">Value</string>
    <string name="contrast">Contrast</string>
    <string name="hue">Hue</string>
    <string name="grayscale">Grayscale Display</string>
    <string name="presets_dialog_title">Select Preset</string>
    <string name="preset_default">Default</string>
    <string name="preset_version_1">Version 1</string>
    <string name="preset_version_2">Version 2</string>
    <string name="preset_version_3">Version 3</string>
    <string name="preset_triluminous">Triluminous</string>
    <string name="preset_deep_black_white">Deep Black and White</string>
    <string name="preset_deep_natural">Deep Natural</string>
    <string name="preset_cool_amoled">Cool Amoled</string>
    <string name="preset_extreme_amoled">Extreme Amoled</string>
    <string name="preset_warm_amoled">Warm Amoled</string>
    <string name="preset_hybrid_mamba">Hybrid Mamba</string>
    <string name="preset_burn_in">Burn in Shit</string>
    <string name="preset_sir_banger">Sir Banger</string>
    <string name="preset_gerard_extrem_cool">Gerard Extreme Cool</string>
    <string name="preset_yoyoz808">Yoyoz808</string>
    <string name="preset_purian">Purian</string>
    <string name="preset_deep_black_colorful">Deep Black Colorful</string>
    <string name="preset_vomer_deep_rich">Vomer Deep Rich</string>
    <string name="preset_franco">Franco</string>
    <string name="preset_wrinklefree_cool">WrinkleFree Cool</string>
    <string name="preset_harley_tech">Harley-Tech</string>
    <string name="preset_perfection">Perfection</string>
    <string name="preset_banged_up">Banged up</string>
    <string name="preset_sim_cooler">SimCooler</string>
    <string name="preset_obsanity">Obsanity</string>
    <string name="preset_obsanity_ips">Obsanity IPS</string>
    <string name="kcal_presets">@string/presets_dialog_title</string>
    <string name="kcal_reset">Reset</string>
    <string name="custom_seekbar_value">Value: <xliff:g id="v">%s</xliff:g></string>
    <string name="custom_seekbar_default_value">Default</string>
    <string name="custom_seekbar_default_value_to_set">Default value: <xliff:g id="v">%s</xliff:g>\nLong press to set</string>
    <string name="custom_seekbar_default_value_is_set">Default value is set</string>
    <string name="otg_title">USB OTG</string>
    <string name="otg_mode_summary">Enable USB-OTG power supply for external headphones and flash drives</string>
    <string name="otg_mode_title">Enable USB-OTG</string>
    <string name="tile_otg_mode">Enable USB-OTG</string>
    <string name="game_category_title">Game Mode</string>
    <string name="game_mode_title">Game Mode</string>
    <string name="game_mode_summary">Boost Touch Sampling Rate</string>
    <string name="game_mode_warning">May decrease battery life</string>
    <string name="dirac_enable">Enable dirac</string>
    <string name="dirac_title">realme-Dirac Sound Enhancer</string>
    <string name="dirac_summary">Optimize audio quality</string>
    <string name="dirac_headset_title">Choose headphones type</string>
    <string name="dirac_preset_title">Choose a preset</string>
    <string name="dirac_headset_default">Default</string>
    <string name="dirac_headset_earbuds">realme Buds</string>
    <string name="dirac_headset_in_ear_2013">realme Buds Neo</string>
    <string name="dirac_headset_piston_1">realme Buds Wired</string>
    <string name="dirac_headset_general">General Earbuds</string>
    <string name="dirac_headset_general_inear">General In-Ear</string>
    <string name="dirac_headset_piston_basic">Basic Edition</string>
    <string name="dirac_headset_piston_2">realme Buds 2</string>
    <string name="dirac_headset_piston_standard">realme Buds 2 Neo</string>
    <string name="dirac_headset_headphone">realme Buds Q</string>
    <string name="dirac_headset_piston_youth">Youth Edition</string>
    <string name="dirac_headset_piston_color">Color Edition</string>
    <string name="dirac_headset_in_ear"> In-Ear</string>
    <string name="dirac_headset_capsule">Capsule</string>
    <string name="dirac_headset_in_ear_pro">realme Buds Q2</string>
    <string name="dirac_headset_comfort">Comfort</string>
    <string name="dirac_headset_reduction_noise">Noise Cancellation (Type-C)</string>
    <string name="dirac_headset_cancelling">Noise Cancellation (3.5mm)</string>
    <string name="dirac_headset_half_in_ear">realme Buds Air</string>
    <string name="dirac_headset_in_ear2">realme Buds Air 2</string>
</resources>