<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2015 The CyanogenMod Project
               (C) 2017-2020 The LineageOS Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.

     See the License for the specific language governing permissions and
     limitations under the License.
-->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <com.realmeparts.settings.preference.SecureSettingSwitchPreference
        android:defaultValue="false"
        android:key="kcal_enabled"
        android:title="@string/kcal_disabled" />

    <com.realmeparts.settings.preference.SecureSettingSwitchPreference
        android:defaultValue="false"
        android:dependency="kcal_enabled"
        android:key="grayscale"
        android:title="@string/grayscale" />

    <PreferenceCategory
        android:key="cat_colormanagement"
        android:title="@string/cat_colormanagement">

        <com.realmeparts.settings.preference.SecureSettingSeekBarPreference
            android:defaultValue="255"
            android:dependency="kcal_enabled"
            android:key="color_red"
            android:max="255"
            android:title="@string/color_red" />

        <com.realmeparts.settings.preference.SecureSettingSeekBarPreference
            android:defaultValue="255"
            android:dependency="kcal_enabled"
            android:key="color_green"
            android:max="255"
            android:title="@string/color_green" />

        <com.realmeparts.settings.preference.SecureSettingSeekBarPreference
            android:defaultValue="255"
            android:dependency="kcal_enabled"
            android:key="color_blue"
            android:max="255"
            android:title="@string/color_blue" />

        <com.realmeparts.settings.preference.SecureSettingSeekBarPreference
            android:defaultValue="35"
            android:dependency="kcal_enabled"
            android:key="color_minimum"
            android:max="255"
            android:title="@string/color_minimum" />

    </PreferenceCategory>

    <PreferenceCategory
        android:key="cat_calibration"
        android:title="@string/cat_calibration">

        <com.realmeparts.settings.preference.SecureSettingSeekBarPreference
            android:defaultValue="35"
            android:dependency="kcal_enabled"
            android:key="saturation"
            android:max="158"
            android:title="@string/saturation" />

        <com.realmeparts.settings.preference.SecureSettingSeekBarPreference
            android:defaultValue="127"
            android:dependency="kcal_enabled"
            android:key="value"
            android:max="255"
            android:title="@string/value" />

        <com.realmeparts.settings.preference.SecureSettingSeekBarPreference
            android:defaultValue="127"
            android:dependency="kcal_enabled"
            android:key="contrast"
            android:max="255"
            android:title="@string/contrast" />

        <com.realmeparts.settings.preference.SecureSettingSeekBarPreference
            android:defaultValue="0"
            android:dependency="kcal_enabled"
            android:key="hue"
            android:max="1536"
            android:title="@string/hue" />

    </PreferenceCategory>
</PreferenceScreen>
